  * Switch from gzip to lzma for compressing the locales in the locales-all
    package. The unpacked size is decreased by 10 and the packed size by 4 for
    no measurable difference on the unpacking time.
  * patches/any/submitted-gethostbyname_r.diff: new patch to fix unaligned
    memory access in gethostbyname_r.diff().  Closes: #419459.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 16 Apr 2007 22:35:26 +0200

glibc (2.5-2) unstable; urgency=low

  * Update Portuguese debconf translation, by Ricardo Silva.  Closes: #418301,
    #418472.
  * Update Brazilian Portuguese debconf translation, by Felipe Augusto van de
    Wiel.  Closes: #418332.
  * Update Romanian debconf translation, by Stan Ioan-Eugen.  Closes: #418337.
  * Update Turkish debconf translation, by Erçin Eker.  Closes: #418340.
  * Update Galician debconf translation, by Jacobo Tarrio.  Closes: #418365.
  * Update Arabic debconf translation, by Ossama Khayat.  Closes: #418378.
  * Update German debconf translation, by Helge Kreutzmann.  Closes: #418426.
  * Update Basque debconf translation, by Piarres Beobide.  Closes: #418521.
  * Update Swedish debconf translation, by Daniel Nylander.  Closes: #418545.
  * Update Spanish debconf translation, by Carlos Valdivia Yagüe.  Closes:
    #418720.
  * Update Russian debconf translation, by Yuri Kozlov.  Closes: #418748.
  * Update Czech debconf translation, by Miroslav Kure.  Closes: #418767.
  * debian/locales-depver: remove exp from the locales version.
  * Replace patches/alpha/submitted-sigsuspend.diff by
    patches/alpha/cvs-sigsuspend.diff from upstream.
  * patches/any/local-ldconfig-fsync.diff: call fsync() before closing
    /etc/ld.so.cache.  Closes: #416716.
  * Update Korean debconf translation, by Sunjae Park.  Closes: #418872.
  * patches/any/local-notls.diff: also include pthread.h from
    linuxthreads/sysdeps/pthread/gai_misc.h.
    m68k/cvs-m68k-update.diff: update from CVS.  Closes: #418881.