@@ -1,13 +1,0 @@
-#!/bin/sh
-
-set -e
-
-if [ "$1" != abort-upgrade ]; then
-  opt=LIBC-FLAVOR
-  touch /etc/ld.so.nohwcap
-  echo $opt >> /etc/ld.so.nohwcap
-fi
-
-#DEBHELPER#
-
-exit 0
