@@ -143,78 +143,10 @@ then
 	fi
     fi
 
-    # Handle upgrades when libc-opt package has been installed.
-    # We check the version between the current installed libc and libc-opt.
-    # If they're unmatched, we keep /etc/ld.so.nohwcap file until libc-opt
-    # package is installed or removed.
-    if [ -f /etc/ld.so.nohwcap ]; then
-	# We check the availability of ld.so.hwcappkgs.  If it's not existed,
-	# it's first time to install ld.so.hwcappkgs aware packages.  We record
-	# all current hwcap package status.
-	if [ ! -f /etc/ld.so.hwcappkgs ]; then
-	    case $(dpkg --print-architecture) in
-		i386)
-		    hwcappkgs="libc6 libc6-i686 libc6-xen"
-		    ;;
-		kfreebsd-i386)
-		    hwcappkgs="libc0.1 libc0.1-i686" 
-		    ;;
-		sparc)
-		    hwcappkgs="libc6 libc6-sparcv9 libc6-sparcv9b"
-		    ;;
-	    esac
-	    if [ -n "$hwcappkgs" ]; then
-		for pkg in $hwcappkgs; do
-		    ver=$(checkpkgver $pkg)
-		    if [ -n "$ver" ]; then
-			echo "$pkg $ver" >> /etc/ld.so.hwcappkgs
-			new_hwcappkgs=yes
-		    fi
-		done
-	    fi
-	fi
-
-	# If ld.so.hwcappkgs is existed, it may have one or more opt packages.
-	# Update the current package's version, and compare the consistency of
-	# those optimized packages.  If inconsistency is found, keep
-	# /etc/ld.so.nohwcap.
-	if [ -f /etc/ld.so.hwcappkgs ]; then
-	    curver=CURRENT_VER
-	    rm -f /etc/ld.so.hwcappkgs.tmp
-	    while read LINE; do
-		case $LINE in
-		    \#*|"") continue
-		esac
-		set -- $LINE
-		pkg=$1; ver=$2
-		if [ "$pkg" = "$package" ]; then
-		    # libc6
-		    ver=$curver
-		    isrecorded=yes
-		else
-		    if [ "$new_hwcappkgs" != yes ]; then
-			ver=$(checkpkgver $pkg)
-		    fi
-		    if [ -z "$ver" ]; then
-			continue
-		    fi
-		    dpkg --compare-versions $curver ne $ver && optunmatch=yes
-		fi
-		echo "$pkg $ver" >> /etc/ld.so.hwcappkgs.tmp
-	    done < /etc/ld.so.hwcappkgs
-	    if [ "$isrecorded" != yes ]; then
-		echo "$package $curver" >> /etc/ld.so.hwcappkgs.tmp
-	    fi
-	    mv /etc/ld.so.hwcappkgs.tmp /etc/ld.so.hwcappkgs
-	fi
-
-	# nohwcap during upgrade.
-	egrep -v '^glibc$|^downgrade-to-old-glibc$' /etc/ld.so.nohwcap > /etc/ld.so.nohwcap.tmp || true
-	mv /etc/ld.so.nohwcap.tmp /etc/ld.so.nohwcap
-	if [ "$optunmatch" != "yes" ]; then
-	    test -s /etc/ld.so.nohwcap || rm -f /etc/ld.so.nohwcap
-	fi
-    fi
+    # We don't use a registry anymore, remove the old file
+    rm -f /etc/ld.so.hwcappkgs
+ 
+    # /etc/ld.so.nohwcap code: NOHWCAP
 
     if [ ! -z $preversion ]; then
 	if [ ! -d /var/mail ] && [ ! -L /var/mail ]; then
