@@ -100,7 +100,6 @@ then
     # This will keep us from using hwcap libs (optimized) during an
     # upgrade.
     touch /etc/ld.so.nohwcap
-    echo glibc >> /etc/ld.so.nohwcap
 fi
 
 # Sanity check.
